--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@600;800&display=swap');
- 
+/* @import url('https://fonts.googleapis.com/css2?family=Karla:wght@600;800&display=swap');
+  */
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap');
  * {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
-   font-family: 'Karla', sans-serif;
+   /* font-family: 'Karla', sans-serif; */
+  font-family: 'Raleway', sans-serif;
  }
  
  body {
   height: 100vh;
   width: 100vw;
-  background-color: #f1f1f1;
+  background-color: #f3dfd8;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -22,7 +24,7 @@ code {
 }
 
 h2 {
-  color: #ed505f;
+  color: #f46d7a;
   text-transform: uppercase;
 }
 
