--- a/src/routes/contact/contact.css
+++ b/src/routes/contact/contact.css
@@ -46,7 +46,7 @@
   font-size: 0.9rem;
   transform: translate(25px, 50%);
   font-weight: 800;
-  background-color: #f1f1f1;
+  background-color: #f3dfd8;
 }
 
 .form-control {
@@ -65,7 +65,7 @@
   border: 4px solid #ed505f;
   transition: border 0.2s ease-in-out;
   font-weight: 500;
-  background-color: #f1f1f1;
+  background-color: #f3dfd8;
 }
 
 #exampleFormControlInput1 {
@@ -73,7 +73,7 @@
   border: 4px solid #ed505f;
   transition: border 0.2s ease-in-out;
   font-weight: 500;
-  background-color: #f1f1f1;
+  background-color: #f3dfd8;
 }
 
 #exampleFormControlTextarea1 {
@@ -81,7 +81,7 @@
   border: 4px solid #ed505f;
   transition: border 0.2s ease-in-out;
   font-weight: 500;
-  background-color: #f1f1f1;
+  background-color: #f3dfd8;
 }
 
 .email {
